--- a/pom.xml
+++ b/pom.xml
@@ -10,17 +10,43 @@
   <packaging>jar</packaging>
 
   <name>myafx.data</name>
-  <description>database</description>
+  <description>database orm</description>
   <url>https://github.com/jerrylai/myafx.data</url>
-  
+  <licenses>
+    <license>
+        <name>The Apache Software License, Version 2.0</name>
+        <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
+  <scm>
+    <url>https://github.com/jerrylai/myafx.data</url>
+    <connection>https://github.com/jerrylai/myafx.data.git</connection>
+  </scm>
+  <developers>
+    <developer>
+      <name>jerrylai</name>
+      <email>jerrylai@aliyun.com</email>
+      <timezone>+8</timezone>
+    </developer>
+  </developers>
   <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>11</java.version>
+    <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
 	</properties>
-  
+  <distributionManagement>
+    <repository>
+      <id>sonatype</id>
+      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+    <snapshotRepository>
+      <id>sonatype</id>
+      <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
   <!-- <dependencies>
     <dependency>
 			<groupId>mysql</groupId>
@@ -28,5 +54,50 @@
       <version>8.0.27</version>
 		</dependency>
   </dependencies> -->
-
+  <build>
+    <plugins>
+        <!-- Source -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>3.2.0</version>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>jar-no-fork</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        <!-- Javadoc -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>3.3.1</version>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>jar</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        <!-- GPG -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>3.0.1</version>
+            <executions>
+                <execution>
+                    <phase>verify</phase>
+                    <goals>
+                        <goal>sign</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+    </plugins>
+  </build>
 </project>
