--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
   <modelVersion>4.0.0</modelVersion>
   
   <groupId>cn.myafx</groupId>
-  <artifactId>myafx.data</artifactId>
+  <artifactId>myafx-data</artifactId>
   <version>1.0.0</version>
   <packaging>jar</packaging>
 
-  <name>myafx.data</name>
+  <name>myafx-data</name>
   <description>database orm</description>
-  <url>https://github.com/jerrylai/myafx.data</url>
+  <url>https://github.com/jerrylai/myafx-data</url>
   <licenses>
     <license>
         <name>The Apache Software License, Version 2.0</name>
@@ -19,8 +19,8 @@
     </license>
   </licenses>
   <scm>
-    <url>https://github.com/jerrylai/myafx.data</url>
-    <connection>https://github.com/jerrylai/myafx.data.git</connection>
+    <url>https://github.com/jerrylai/myafx-data</url>
+    <connection>https://github.com/jerrylai/myafx-data.git</connection>
   </scm>
   <developers>
     <developer>
@@ -55,6 +55,7 @@
 		</dependency>
   </dependencies> -->
   <build>
+    <!-- <finalName>${project.artifactId}-${project.version}</finalName> -->
     <plugins>
         <!-- Source -->
         <plugin>
