--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>cn.myafx</groupId>
   <artifactId>myafx-data</artifactId>
-  <version>2.0.0</version>
+  <version>2.1.0</version>
   <packaging>jar</packaging>
 
   <name>myafx-data</name>
@@ -39,13 +39,13 @@
       <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
     </snapshotRepository>
   </distributionManagement>
-  <!-- <dependencies>
+  <dependencies>
     <dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
       <version>8.0.27</version>
-		</dependency>
-  </dependencies> -->
+    </dependency>
+  </dependencies>
   <build>
     <!-- <finalName>${project.artifactId}-${project.version}</finalName> -->
     <plugins>
